-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10
-
Component/s: javafx
-
b147
-
generic
-
os_x
FULL PRODUCT VERSION :
java version "9.0.1"
Java(TM) SE Runtime Environment (build 9.0.1+11)
Java HotSpot(TM) 64-Bit Server VM (build 9.0.1+11, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Darwin Mac-mini.local 16.7.0 Darwin Kernel Version 16.7.0: Thu Jun 15 17:36:27 PDT 2017; root:xnu-3789.70.16~2/RELEASE_X86_64 x86_64
A DESCRIPTION OF THE PROBLEM :
I'm developing a x-platform desktop app with a resizable main window primaryStage.setResizable(true), after I have clicked the little green button to go into full screen mode and then back again to normal mode the resizing of the window is no longer possible. It works on Windows and Linux but not on MacOS.
I have a question out on StackOverflow regarding this issue and was told this i most likely a bug introduced from jdk-9.
https://stackoverflow.com/questions/47476328/how-to-make-main-javafx-window-still-resizable-coming-back-from-full-screen-mode/47478067#47478067
REGRESSION. Last worked in version 8u152
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
1. Make a JavaFX application, set primaryStage.setResizable(true)
2. Run application
3. Click the little green maximize button on window to enter full-screen mode
4. Click the little green button again to resume to normal screen mode
5. Resizable window is no longer resizable
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Window should continue to be resizable after coming back from full-screen mode.
ACTUAL -
Window not resizable after coming back from full-screen mode. It is fixed.
REPRODUCIBILITY :
This bug can be reproduced always.
java version "9.0.1"
Java(TM) SE Runtime Environment (build 9.0.1+11)
Java HotSpot(TM) 64-Bit Server VM (build 9.0.1+11, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Darwin Mac-mini.local 16.7.0 Darwin Kernel Version 16.7.0: Thu Jun 15 17:36:27 PDT 2017; root:xnu-3789.70.16~2/RELEASE_X86_64 x86_64
A DESCRIPTION OF THE PROBLEM :
I'm developing a x-platform desktop app with a resizable main window primaryStage.setResizable(true), after I have clicked the little green button to go into full screen mode and then back again to normal mode the resizing of the window is no longer possible. It works on Windows and Linux but not on MacOS.
I have a question out on StackOverflow regarding this issue and was told this i most likely a bug introduced from jdk-9.
https://stackoverflow.com/questions/47476328/how-to-make-main-javafx-window-still-resizable-coming-back-from-full-screen-mode/47478067#47478067
REGRESSION. Last worked in version 8u152
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
1. Make a JavaFX application, set primaryStage.setResizable(true)
2. Run application
3. Click the little green maximize button on window to enter full-screen mode
4. Click the little green button again to resume to normal screen mode
5. Resizable window is no longer resizable
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Window should continue to be resizable after coming back from full-screen mode.
ACTUAL -
Window not resizable after coming back from full-screen mode. It is fixed.
REPRODUCIBILITY :
This bug can be reproduced always.
- relates to
-
JDK-8087498 [Mac] Full screen mode fails for certain StageStyles
-
- Resolved
-
-
JDK-8208070 [MacOS] Write a manual test for fix done for JDK-8191885
-
- Resolved
-