8191885: [MacOS] JavaFX main window not resizable coming back from full screen mode in MacOS

Reviewed-by: kcr, mbilla